--- a/assets/css/filmapp.css
+++ b/assets/css/filmapp.css
@@ -127,3 +127,16 @@ dialog form {
   flex-direction: column;
   gap: 8px;
 }
+
+.modelEdit {
+  display: none;
+}
+
+.editModal .modelEdit {
+  display: initial;
+}
+
+.editModal .modelAddNew {
+  display: none;
+}
+
